// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem should render correctly with attributes 1`] = `
<li
  class="test-class item"
  id="test-id"
>
  Testing list item
</li>
`;

exports[`ListItem should render correctly with icon 1`] = `
<li
  class="item with-icon"
>
  <span
    class="icon"
  >
    <span
      class="container size-20 shape-round"
      data-qa="Icon"
    >
      <svg
        data-qa="Menu"
        fill="none"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h12M4 10h12M4 15h12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </span>
  Testing list item
</li>
`;

exports[`ListItem should render correctly with no props 1`] = `
<li
  class="item"
/>
`;

exports[`ListItem should render correctly with text 1`] = `
<li
  class="item"
>
  Testing list item
</li>
`;
